# cfa-cloudops

./: .gitattributes  .gitignore  .pre-commit-config.yaml  .secrets.baseline  README.md  changelog.md  cloudopsTroubleshooting.md  container_requirements.txt  deploy_monitor_functions.py  mkdocs.yaml  mkdocs.yml  monitor_functions.py  pyproject.toml  ruff.toml  run_container.py
.github/actions/mkdocs-build/: action.yaml
.github/actions/pre-commit/: action.yaml
.github/workflows/: pre-commit.yaml  run-container-job.yaml  tagging.yaml
cfa/cloudops/: __init__.py  _cloudclient.py  _containerappclient.py  _function_app_client.py  agent.py  agent_azureopen_ai.py  agent_langchain_azureopen_ai.py  auth.py  automation.py  autoscale.py  batch_helpers.py  blob.py  blob_helpers.py  client.py  config.py  cred_checker_draft.ipynb  defaults.py  endpoints.py  foundry.yaml  foundry_client.py  helpers.py  job.py  scripts.py  task.py  util.py
cfa/cloudops/agent/: README.md  diagram.md  job_agent.py  main.py  requirements-web.txt  requirements.txt  workflow_executor.py  workflow_planner.py
cfa/cloudops/agent/config/: cloudclient_prompt.txt  operational_dependencies.yaml  prompt.txt  prompt_v2.txt  prompt_v3.txt  prompt_v4.txt
cfa/cloudops/agent/output/: generated_workflow_06ba361d.yaml  generated_workflow_1d0f4262.yaml  generated_workflow_74ba258b.yaml  workflow_2.yaml  workflow_3.yaml  workflow_backup.yaml
cfa/cloudops/agent/static/: style.css
cfa/cloudops/agent/templates/: index.html
cfa/cloudops/examples/: README.md  agent_langchain_openai.py  agent_openai.py  create_container_app.py  main.py
cfa/cloudops/local/: __init__.py  _client.py  automation.py  batch.py  helpers.py
cfa/cloudops/metaflow/: README.md  __init__.py  multiple_states.py  requirements.txt  states.txt
cfa/cloudops/metaflow/custom_metaflow/: cfa_batch_pool_service.py
cfa/cloudops/metaflow/custom_metaflow/plugins/decorators/: __init__.py  cfa_azure_batch_decorator.py
cfa/cloudops/metaflow/examples/: BKDockerfile  Dockerfile  DockerfileMultipleParallel  README.md  bk_algorithm.py  bk_job.toml  bk_requirements.txt  client_config_states.toml  find_cliques.py  job.toml  main.py  metaflow.env  multiple_states.py  requirements.txt  script.sh  states.txt  upload_container.py  upload_files.py
cfa/cloudops/template/: cfa_service.txt  containers.txt  function_app.txt  local.settings.txt  requirements.txt  timer_blueprint.txt  timer_blueprint_no_functions.txt
cfa/cloudtools/: auth.py
docs/: README.md  automation.md  cli.md  github_actions.md  index.md  local.md  modules.md  overview.md  troubleshooting.md
docs/CloudClient/: authentication.md  blob.md  dag.md  index.md  job.md  pool.md
docs/ContainerAppClient/: index.md
docs/FunctionAppClient/: index.md
docs/api/: cloudclientapi.md  containerappapi.md  index.md  modulesapi.md
docs/examples/: index.md
docs/examples/R/: Dockerfile  README.md  launch_job.py  r_helloworld.r
docs/examples/dag/: run_dag.ipynb
docs/examples/dags/: index.md  running_dags.ipynb
docs/examples/dependencies/: compile.py  index.md  states.py  task_dependencies.ipynb
docs/examples/dependencies/data/: CA_affected.csv  NY_affected.csv
docs/examples/getting_started/: Dockerfile  cloudclient_walkthrough.ipynb  index.md  main.py
docs/files/: index.md  sample.env  sp_sample.env
docs/files/automation/: exp_config.toml  index.md  params.yaml  task_config.toml
docs/presentations/: cloudops-wg-20250909.html  cloudops-wg-20250909.md
tests/: shared_fixtures.py  test_batch_helpers.py  test_blob.py  test_blob_helpers.py  test_cloudclient.py  test_job.py  test_scripts.py
