[project]
name = "cfa.cloudops"
version = "0.0.1"
description = "Cloud storage, batch, functions, MLOps assistance"
authors = [
    {name = "Ryan Raasch", email = "xng3@cdc.gov"}
]
readme = "README.md"
requires-python = ">=3.9,<3.13"
dependencies = [
    "tomli (>=2.2.1,<3.0.0)",
    "tqdm (>=4.67.1,<5.0.0)",
    "pandas (>=2.2.3)",
    "polars (>=1.26.0)",
    "tqdm (>=4.67.0)",
    "azure-mgmt-batch (>=18.0.0)",
    "azure-storage-blob (>=12.23.1)",
    "azure-identity (>=1.18.0)",
    "msrest (>=0.7.1)",
    "msrestazure (>=0.6.4.post1)",
    "azure-keyvault (>=4.2.0)",
    "azure-mgmt-compute (>=34.1.0)",
    "azure-batch (>=14.2.0)",
]

[tool.poetry]
packages = [{include = "cfa"}]


[tool.poetry.group.dev.dependencies]
ruff = "^0.9.9"
pytest = "^8.3.5"
pytest-mock = "^3.14.0"
pytest-cov = "^6.1.1"
coverage-badge = "^1.1.2"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
